samples/_failures_safe/1761470248_ef9aa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8ec22fa.c: In function ‘main’:
./samples/SAFE/__tmp_a8ec22fa.c:170:25: error: missing terminating " character
  170 |         fprintf(stderr, "Failed to create stack
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a8ec22fa.c:170:9: error: expected expression at end of input
  170 |         fprintf(stderr, "Failed to create stack
      |         ^~~~~~~
./samples/SAFE/__tmp_a8ec22fa.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8ec22fa.c:170:9: error: expected declaration or statement at end of input
